# vscode-glog-gtest-demo

./: CMakeLists.txt  README.md  main.cc
datas/: demo.txt  demo2.txt  header_file.txt
glog/: Makefile.in  aclocal.m4  configure
include/: dict_parser.h  field.h
logdir/: main.INFO  main.keithyin.local.yinpeng02.log.ERROR.20200526-115653.3968  main.keithyin.local.yinpeng02.log.INFO.20200526-115807.4131
test/: CMakeLists.txt  TestGoodCoder.cc
